fix(issues): prefill gitHub repo name, remove extra space, linkto open in new window

--- a/src/assets/stylesheets/shared/_cards.less
+++ b/src/assets/stylesheets/shared/_cards.less
@@ -19,7 +19,7 @@
         min-height: 550px;
       }
       &--large {
-        min-height: 500px;
+        min-height: 860px;
       }
       &-title {
         display: inline-flex;
